@@ -40,6 +40,9 @@ class ldp_tests(unittest.TestCase):
 		# Read a frame
 		frame = f.readFrame()
 		
+		# Get the remaining frame count
+		self.assertEqual(f.getRemainingFrameCount(), f.getInfo("nFrames")-1)
+		
 		# Reset
 		f.reset()
 		
@@ -60,6 +63,9 @@ class ldp_tests(unittest.TestCase):
 		
 		# Read a frame
 		frame = f.readFrame()
+		
+		# Get the remaining frame count
+		self.assertEqual(f.getRemainingFrameCount(), f.getInfo("nFrames")-1)
 		
 		# Reset
 		f.reset()
@@ -82,6 +88,10 @@ class ldp_tests(unittest.TestCase):
 		
 		# Read a frame
 		frame = f.readFrame()
+		
+		# Get the remaining frame count - the extra -3 here is for the timetag
+		# alignemnt that happens when the drx-test.dat file is made ready.
+		self.assertEqual(f.getRemainingFrameCount(), f.getInfo("nFrames")-3-1)
 		
 		# Reset
 		f.reset()
@@ -114,6 +124,9 @@ class ldp_tests(unittest.TestCase):
 		
 		# Read a frame
 		frame = f.readFrame()
+		
+		# Get the remaining frame count
+		self.assertEqual(f.getRemainingFrameCount(), f.getInfo("nFrames")-1)
 		
 		# Reset
 		f.reset()
